--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 /ColeccionesGenericas/target/
+/EntradaDatos1/target/
+/EntradaDatos/target/
