--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ hs_err_pid*
 /Java/test/dist/
 /Java/test/nbproject/private/
 /HTML/HolaMundoHtml/nbproject/private/
+/HTML/ComponentesTexto/nbproject/private/
